# dcat-ap-plus

./: .copier-answers.yml  .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  config.public.mk  dcat_ap_plus.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yaml  main.yaml  pypi-publish.yaml  test_pages_build.yaml
about/: index.html
docs/: about.md  index.md
elements/: index.html
elements/Activity/: index.html
elements/Agent/: index.html
elements/AgenticEntity/: index.html
elements/AnalysisDataset/: index.html
elements/AnalysisSourceData/: index.html
elements/Any/: index.html
elements/Attribution/: index.html
elements/Boolean/: index.html
elements/Catalogue/: index.html
elements/CatalogueRecord/: index.html
elements/Checksum/: index.html
elements/ChecksumAlgorithm/: index.html
elements/ClassifierMixin/: index.html
elements/Concept/: index.html
elements/ConceptScheme/: index.html
elements/Curie/: index.html
elements/DataAnalysis/: index.html
elements/DataGeneratingActivity/: index.html
elements/DataService/: index.html
elements/Dataset/: index.html
elements/DatasetSeries/: index.html
elements/DatasetThemes/: index.html
elements/Date/: index.html
elements/DateOrDatetime/: index.html
elements/Datetime/: index.html
elements/Decimal/: index.html
elements/DefinedTerm/: index.html
elements/Device/: index.html
elements/Distribution/: index.html
elements/Document/: index.html
elements/DomainAgnosticCore/: index.html
elements/Double/: index.html
elements/Duration/: index.html
elements/Entity/: index.html
elements/EvaluatedActivity/: index.html
elements/EvaluatedEntity/: index.html
elements/Float/: index.html
elements/Frequency/: index.html
elements/Geometry/: index.html
elements/HexBinary/: index.html
elements/Identifier/: index.html
elements/Integer/: index.html
elements/Jsonpath/: index.html
elements/Jsonpointer/: index.html
elements/Kind/: index.html
elements/LegalResource/: index.html
elements/LicenseDocument/: index.html
elements/LinguisticSystem/: index.html
elements/Location/: index.html
elements/MediaType/: index.html
elements/MediaTypeOrExtent/: index.html
elements/Ncname/: index.html
elements/Nodeidentifier/: index.html
examples/: README.md
project/: README.md
schema/: dcat_ap_plus.yaml
search/: search_index.json
src/: dcat_ap_shacl.jsonld  dcat_ap_shacl_2_linkml.py
tests/: __init__.py  test_data.py
(+202 files in other folders)
